# automata_programming

./: .gitmodules  Description.md  LINK.md  TODO.md  content.txt  КР_15.11.2019.txt
-2.Practice/: CMakeLists.txt
-2.Practice/01.Turing_Machine/: CMakeLists.txt  turing_machine_test.cpp
-2.Practice/02.Turing_Machine/: CMakeLists.txt  turing_machine_test.cpp
-2.Practice/03.Turing_Machine/: CMakeLists.txt  main.c
00.History/: 00.History.md
01.Environment/: 01.Environment.md
02.VerControlSystem/: 02.VerControlSystem.md
03.Turing_Machine/: 03.Turing_Machine.md
04.Regular_Expression/: 04.Regular_Expression.md
05.Lexical_Analyze/: 05.Lexical_Analyze.md
08.Promela_Spin/: 08.Promela_Spin.md
_1.CodeStyle/: -1.CodeStyle.md
_2.Practice/: .gitignore  CMakeLists.txt
_2.Practice/00.Base/: base_macro.h  tests_main.cpp
_2.Practice/00.Base/network/: eth_server.c  eth_server.h
_2.Practice/00.Base/spin/windows/: _spin_nvr.tmp  example.bat  example.pml  example.pml.trail  pan.b  pan.c  pan.dot  pan.h  pan.m  pan.ps  pan.t
_2.Practice/03.Turing_Machine/: CMakeLists.txt  change_sharp_algorithm.c  main.c  turing_machine.c  turing_machine.h  turing_machine_test.cpp
_2.Practice/04.Regular_Expression/: CMakeLists.txt  main.c  simple_regexp.c  simple_regexp.h  simple_regexp_tests.cpp
_2.Practice/05.Lexical_Analyze/: CMakeLists.txt  main.c  mathematics_lang.c  mathematics_lang.h  mathematics_lang_tests.cpp
_2.Practice/05.Lexical_Analyze/tests_data/: __lexer_source.txt
_2.Practice/06.Control_Program/: CMakeLists.txt  device.c  device.h  emulate_network_cli.c  engine.c  engine.h  main.c  properties.c  properties.h  sensor.c  sensor.h
_2.Practice/06.Control_Program/tests/: registers.txt
_2.Practice/07.Promela/: 00.HelloWorld.pml  01.InitProcess.pml  02.CallProcess.pml  03.RunProcess.pml  04.StrongSynchronization.pml  05.WaitExpression.pml  06.DoAndProduceConsume.pml  07.ResourceExclude.pml  08.MutexAlgorithm.pml  09.Semaphore.pml
_2.Practice/08.Simple_Program/: CMakeLists.txt  simple_main.c
_2.Practice/09.FSM_SimInTech_Program/: .gitignore  CMakeLists.txt  delay_fsm.c  delay_fsm.h  delay_main.c  main_tests.cpp  Задержка автомат.mgr.7  Задержка автомат.prt  Задержка автомат.prt.1  Задержка автомат.prt.2  Задержка автомат.prt.3  Задержка автомат.prt.4  Задержка автомат.prt.5  Задержка автомат.prt.7  Задержка автомат.prt.8  Задержка автомат.prt.9  Задержка.prt  Задержка.prt.1  Задержка.prt.10  Задержка.prt.11  Задержка.prt.12  Задержка.prt.13  Задержка.prt.14  Задержка.prt.15  Задержка.prt.16  Задержка.prt.18  Задержка.prt.19  Задержка.prt.2  Задержка.prt.20  Задержка.prt.21  Задержка.prt.22  Задержка.prt.23  Задержка.prt.25  Задержка.prt.26  Задержка.prt.27  Задержка.prt.28  Задержка.prt.29  Задержка.prt.30  Задержка.prt.5  Задержка.prt.6  (+3 more)
_2.Practice/10.FSM_InsertElement/: CMakeLists.txt  inserting_fsm.c  inserting_fsm.h  inserting_main.c  inserting_tests.cpp
_2.Practice/11.FSM_ControlPneumo/: .gitignore  CMakeLists.txt  automate.mgr.7  automate.prt.1  automate.prt.2  automate.prt.3  automate.prt.4  automate.prt.5  automate.prt.6  automate.prt.7  automate.prt.8  automate.prt.9  main.c  model.mgr  model.mgr.1  model.prt  model.prt.1  model.prt.2  pneumo_ctrl.c  pneumo_ctrl.h  simulate.process
docs/: 01_лекция.txt  automata_programming.tex  bibs.bib  convert.bat  lecture.build.bat  lecture_Promela_SPIN.tex
projects_c/: .gitignore  CMakeLists.txt
projects_c/stages/stage2/: CMakeLists.txt
projects_c/stages/stage2/src/: conditioner.c  conditioner_i.h  emulator.h  main.c  memory_storage.c  version.h.in
projects_c/stages/stage2/tests/: conditioner_i_tests.cpp
projects_c/stages/stage3/: CMakeLists.txt
projects_c/stages/stage3/src/: conditioner.c  conditioner.h  conditioner_i.h  emulator.h  main.c  memory_storage.c
projects_c/stages/stage3/tests/: conditioner_i_tests.cpp  test_constants.h
projects_c/stages/stage4/: CMakeLists.txt
projects_c/stages/stage4/src/: conditioner.c  emulator.h  main.c
projects_c/stages/stage4/tests/: temperature_sensor_tests.cpp
projects_c/stages/stage5/: CMakeLists.txt
projects_c/stages/stage5/src/: conditioner.c  conditioner_i.h  emulator.h  external_controller.c  main.c  temperature_sensor.c
projects_c/stages/stage5/tests/: conditioner_i_tests.cpp  external_controller_tests.cpp  memory_storage_tests.cpp
projects_c/stages/turing_machine/: CMakeLists.txt
projects_c/stages/turing_machine/src/: main.c  turing_machine.c  turing_machine.h
projects_c/stages/turing_machine/tests/: turing_machine_test.cpp
projects_c/tests_data/: turing_machine_states
projects_mc/: .gitignore  cnc.pml  conditioner.pml  conditioner_multi.pml  create_pan.bat  create_pan_cnc.bat  create_pan_multi.bat  simulate.bat  simulate.sh  simulate_cnc.bat  simulate_multi.bat  spin_result.txt
stage1/: conditioner.pml  create_pan.sh  pan_result.txt
stage2/: CMakeLists.txt
stage2/src/: conditioner.c  conditioner.h  conditioner_i.h
stage2/tests/: conditioner_i_tests.cpp  memory_storage_tests.cpp
stage2/tests_data/: conditioner_001.blob  conditioner_main.blob
text/: automata_programming.tex  bibs.bib
